@@ -43,8 +43,8 @@
 \examples{
 \dontrun{
 library(oce)
-data(sealevelHalifax)
-tide <- tidem(sealevelHalifax)
+data(sealevel)
+tide <- tidem(sealevel)
 plot(tide)
 }
 }
