@@ -493,8 +493,8 @@ jpeg("sealevel.jpg", quality=70, width=800, height=600, pointsize=20)
 <<>>=
 library(oce)
 #sealevel <- read.oce("../../tests/h275a96.dat")
-data(sealevelHalifax)
-plot(sealevelHalifax)
+data(sealevel)
+plot(sealevel)
 @
 <<fig=FALSE, eval=TRUE, echo=FALSE, results=hide>>=
 dev.off()
@@ -536,13 +536,13 @@ version.  (The problems involve phase, and the inference of satellite nodes.)
 %%%
 %%% <<label=tideplot,eval=FALSE>>=
 %%% library(oce)
-%%% data(sealevelHalifax)
-%%% tide <- tidem(sealevelHalifax)
+%%% data(sealevel)
+%%% tide <- tidem(sealevel)
 %%% days <- 15 # focus on these days at end of series
-%%% n <- length(sealevelHalifax$data$elevation)
+%%% n <- length(sealevel$data$elevation)
 %%% i <- seq(n-24*days, n)
-%%% t   <- sealevelHalifax$data$t[i]
-%%% eta <- sealevelHalifax$data$elevation[i]
+%%% t   <- sealevel$data$t[i]
+%%% eta <- sealevel$data$elevation[i]
 %%% eta.pred <- predict(tide)[i]
 %%% plot(t, eta, type="l", ylim=c(-0.5,3))
 %%% abline(h=0, col="pink")
@@ -770,9 +770,9 @@ The author can verify that the strongest winds occurred a bit after midnight -- 
 he moved to a room without windows, in fear of flying glass.
 <<>>=
 library(oce)
-data(sealevelHalifax)
+data(sealevel)
 # Focus on 2003-Sep-28 to 29th, the time when Hurricane Juan caused flooding
-plot(sealevelHalifax,which=1,xlim=as.POSIXct(c("2003-09-24","2003-10-05"), tz="UTC"))
+plot(sealevel,which=1,xlim=as.POSIXct(c("2003-09-24","2003-10-05"), tz="UTC"))
 abline(v=as.POSIXct("2003-09-29 04:00:00", tz="UTC"), col="red")
 mtext("Hurricane\nJuan", at=as.POSIXct("2003-09-29 04:00:00", tz="UTC"), col="red")
 @
@@ -782,11 +782,11 @@ mtext("Hurricane\nJuan", at=as.POSIXct("2003-09-29 04:00:00", tz="UTC"), col="re
 The first step is to load the data.
 <<>>=
 library(oce)
-data(sealevelHalifax)
+data(sealevel)
 @
 Next, we extract the elevation data
 <<>>=
-elevation <- sealevelHalifax[["elevation"]]
+elevation <- sealevel[["elevation"]]
 @
 and then we return to standard R processing, to compute the spectrum, and 
 indicate the M2 tide.
